# house-of-claudes

./: .gitignore  CLAUDE.md  LICENSE  README.md  evaluate.py  program.md  pyproject.toml  research.py
.claude/: settings.local.json
.claude/skills/: data-analysis.md  evaluation.md  feature-engineering.md  model-training.md  submission.md
data/live/: liveblog.json  results.json
docs/: index.html
outputs/: best_scores.json
outputs/reports/: calibration_feature_analysis.md  experiment_journal.md  experiment_log.md  v5_lgb55-lr45-blend_l1w_report.md  v7_lgb40-lr60-blend_qtl1w_report.md
outputs/submissions/: baseline_rf_2026.csv  baseline_seed_2026.csv  kaito510_goto_winning.csv
scripts/: MhouseOfCardFINAL.R  WhouseOfCardFINAL.R  brier_floor_analysis.py  calibration_2026.py  calibration_analysis.py  download_data.py  download_women_torvik.py  exp10_enhanced_features.py  exp10b_ensemble.py  exp11_enhanced_iter_eff.py  exp12_conference_features.py  exp13_trank_clone.py  exp14_trank_features_blend.py  exp15_calibration.py  exp9_more_torvik.py  exp9_women_lgb.py  exp_r_model_port.py  experiment6_clean.py  experiment6b_meta_ensemble.py  experiment7_torvik.py  experiment_improvements.py  game_monitor.py  generate_dashboard_baselines.py  generate_submissions.py  generate_submissions_v2.py  generate_submissions_v3.py  generate_submissions_v4.py  generate_submissions_v5.py  generate_submissions_v7.py  generate_v7_brackets.py  render_html.py  run_pipeline.py  v7_diagnostics.py
tests/: test_features.py  test_pipeline.py  test_regression.py  test_submission.py
(+24 files in other folders)
